@@ -4,5 +4,6 @@ mobac.mapsources.mappacks.openstreetmap.Hikebikemap
 mobac.mapsources.mappacks.openstreetmap.OpenPisteMap
 mobac.mapsources.mappacks.openstreetmap.OpenSeaMap
 mobac.mapsources.mappacks.openstreetmap.MapQuest
+mobac.mapsources.mappacks.openstreetmap.Osm4uMaps
 mobac.mapsources.mappacks.openstreetmap.OsmPublicTransport
 mobac.mapsources.mappacks.openstreetmap.WanderreitkarteAbo
